# pytest-pyvenv

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bumpversion.yaml  run_tests.yaml
docs/: Makefile  conf.py  index.rst  sample_make.bat
src/pytest_env/: __init__.py
src/pytest_pyvenv/: __init__.py
tests/: test_venv_class.py
tests/mypkg/: pyproject.toml
